--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<div align="center">服务器维护中....</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
+<html> 
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
+    <title>阿骆精帖网正在维护中......</title>
+    <meta name="keywords" content="aluo,aluocn,阿骆,阿骆精帖网" />
+    <link rel="stylesheet" href="master.css" type="text/css" media="screen" charset="utf-8"/> 
+  </head> 
+  <body> 
+    <div id='wrapper'> 
+      <div id='header'> 
+        <h1>aluo.cn 阿骆精帖网</h1> 
+        <h2>阿骆精帖网</h2> 
+      </div> 
+      <div id='menu'> 
+        <ul> 
+          <li><a>关于</a></li> 
+          <li><a>目录</a></li> 
+          <li><a>讨论</a></li> 
+          <li><a>微博</a></li> 
+        </ul> 
+     </div> 
+     <div id='content'> 
+<p>服务器维护中....</p>
+
+
+ 
+        <div class='clearfix'><div align="center"></div></div></div> 
+      </div> 
+    </div> 
+    <div id='footer'> 
+        <br/>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
+      <br/>Copyright © 2012 http://www.aluo.cn
+    </div> 
+
+    
+  </body> 
+</html> 
+
